--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li>Sleeping</li>
 </ol>
 <p>I have <span style="color:brown">brown</span> hair.</p>
-<img src="selfie.jpeg" \cf5 \cb6 \strokec5 width\cf4 \strokec4 =\'93100"\cf5 \strokec5 \'a0height\cf4 \strokec4 =\'93200"\cf2 \cb3 \strokec4 >
+<img src="selfie.jpeg"/>
 <table>
     <tr>
         <th>Rank</th>
