--- a/index.html
+++ b/index.html
@@ -3,15 +3,58 @@
 <html>
 <body>
 <h1>Introducing Me</h1>
-<p>Hi my name is Destynee Fagaragan and this is my first webpage.</p>
+<style>
+body { 
+  background: lightseagreen; 
+}
+</style>
+<style>
+    body {
+      color: gray;
+    }
+</style>
+<style>
+    h1 {
+      background-color: orange;
+    }
+    </style>
+<style>
+    div > p {
+      background-color: yellow;
+    }
+    </style>
+<style>
+    div h2 {
+      background-color: red;
+    }
+    </style>
+<style>
+    p {
+      background-color: green;
+    }
+    </style>
+<style>
+    .nice {
+        font-family: sans-serif;
+    }
+    </style>
+<p class="nice">Hi my name is Destynee Fagaragan and this is my first webpage.</p>
+<div>
 <h2>My Favorite Hobbies</h2>
-<p>Here is a list of my hobbies:</p>
+</div>
+<p class="nice">Here is a list of my hobbies:</p>
 <ol>
     <li>Photography</li>
     <li>T-shirt making</li>
     <li>Sleeping</li>
 </ol>
-<p>I have <span style="color:brown">brown</span> hair.</p>
+<style>
+    #favoritecolor {
+      background-color: pink;
+    }
+    </style>
+<p id="favoritecolor"> My favorite color is pink.</p>
+<p class="nice">I have <span style="color:brown">brown</span> hair.</p>
 <img src="selfie.jpeg"/>
 <table>
     <tr>
@@ -28,15 +71,31 @@
   	<td>3</td>
     <td>Chicken Wings</td>
 </table>
+<style>
+    div {
+      background-color: lightgrey;
+      width: 300px;
+      border: 15px solid white;
+      padding: 50px;
+      margin: 20px;
+    }
+    </style>
+<div>
 <p>Favorite Shows:</p>    
 <ul style="list-style-type: disc">
     <li>How to Get Away With Murder</li>
     <li>One Tree Hill</li>
     <li>Gossip Girl</li>
 </ul>
+</div>
+<style>
+    a[target] {
+      background-color: yellow;
+    }
+    </style>
 <p class="question"><a href="#global">What are global attributes?</a></p>
-<a href="#faq">Click here to read the Frequently Asked Questions</a>
+<a href="#faq" target="_blank"> Click here to read the Frequently Asked Questions</a>
 <hr/>
-<h3 id="faq">Frequently asked questions</h3>
+<h3 id="faq" class="question">Frequently asked questions</h3>
 </body>
 </html>
